--- a/chrome-extension.html
+++ b/chrome-extension.html
@@ -7,7 +7,7 @@
 
     <link rel="stylesheet" href="chrome-extension.css">
     
-    <title>Document</title>
+    <title>Lead Tracker</title>
 </head>
 <body>
     
