--- a/chrome-extension.html
+++ b/chrome-extension.html
@@ -14,6 +14,7 @@
 
     <input id="input-el" type="text">
     <button id="input-btn">SAVE INPUT</button>
+    <button id="clear-el">DELETE ALL</button>
     <ul id="ul-el"></ul>
 
     <script src="chrome-extension.js"></script>
